--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		</nav><!-- /static navbar -->
 
 		<div class="containe">
-			<img height="80%" width="100%" src="images/cover.JPG" alt="">
+			<img height="80%" width="100%" src="images/cover.jpg" alt="">
 		</div>
 
 		<!-- slider -->
