--- a/faq.html
+++ b/faq.html
@@ -183,7 +183,7 @@ margin-top:16px;
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">منو</a>
+					<a class="navbar-brand" href="#">القائمة</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav" data-hover="dropdown" data-animations="zoomIn fadeInLeft fadeInUp fadeInRight">
